Thu Oct 28 10:38:21 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Track how many documents in the index we haven't seen
	  in this index run - if this is 0, we don't need to check for docs
	  to delete at all; otherwise we can at least use it to know when we
	  have found them all.  Use a PostingIterator over all documents to
	  avoid having to catch exceptions from delete_document() for gaps
	  in the used docids.

Thu Oct 28 04:52:36 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Add quotes around directory name in "Entering directory"
	  message.  Add directory name to "skipping directory" error message.

Thu Oct 28 04:50:37 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Document --verbose in --help.  Actually recognise -V.

Thu Oct 28 04:01:31 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Move the directory iteration loop out of the try/catch
	  block for starting the iteration, which means it's indented by a
	  whole level less.

Thu Oct 28 03:47:30 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Add --verbose option, and disable the less interesting
	  output unless it is specified.

Thu Oct 28 03:34:44 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Eliminate the message "Caught unknown exception in
	  index_directory, rethrowing" as it isn't actually informative.

Thu Oct 28 01:43:44 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Variable dbpath doesn't need to be global.

Thu Oct 28 01:28:10 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: The Host and Path terms are the same for every document
	  in a single invocation of omindex, so calculate them just once up
	  front.

Thu Oct 28 01:13:36 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Eliminate the leading slash on filenames in output, so
	  they are now relative filenames on the system.  This also simplifies
	  path building internally.

Wed Oct 27 09:51:51 GMT 2010  Olly Betts <olly@survex.com>
